syntax = "proto3";

package logs;
option go_package = "./logs";

import "google/protobuf/timestamp.proto";
// import "opentelemetry/proto/trace/v1/trace.proto";

service LogService {
    rpc LogMessage(LogMessageRequest) returns (LogMessageResponse);
    rpc SendSpans(Spans) returns (LogMessageResponse);
}

message LogMessageRequest {
    string message = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message LogMessageResponse {
    bool success = 1;
}

message Attribute {
  string key = 1;
  string value = 2;
}

message OneSpan {
  google.protobuf.Timestamp Timestamp = 1;
  string TraceId = 2;
  string SpanId = 3;
  string ParentSpanId = 4;
  string TraceState = 5;
  string SpanName = 6;
  string SpanKind = 7;
  string ServiceName = 8;
  map<string, string> ResourceAttributes = 9;
  map<string, string> SpanAttributes = 10;
  int64 Duration = 11;
  int32 StatusCode = 12;
  string StatusMessage = 13;
  repeated google.protobuf.Timestamp Events_Timestamp = 14;
  repeated string Events_Name = 15;
  repeated Attribute Events_Attributes = 16;
  repeated string Links_TraceId = 17;
  repeated string Links_SpanId = 18;
  repeated string Links_TraceState = 19;
  repeated Attribute Links_Attributes = 20;
  int32 ChildSpanCount = 21;
}

message Spans {
  repeated OneSpan spans = 1;
}
